--- a/RH.csproj
+++ b/RH.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RushHour.cs" />
     <Compile Include="State.cs" />
+    <Compile Include="Step.cs" />
     <Compile Include="Trie.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
