--- a/RH.csproj
+++ b/RH.csproj
@@ -48,6 +48,7 @@
     <Compile Include="RushHour.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Step.cs" />
+    <Compile Include="TabooD.cs" />
     <Compile Include="Trie.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
